src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

:root {
  --border-opacity: 0;
  /* Initially transparent */
}

.hover\:border-visible:hover {
  --border-opacity: 1;
  /* Fully visible on hover */
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  /* :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  } */
}

@theme {
  /* Base Colors */
  --color-base-25: #00000040;
  --color-base-50: #FFFFFF80;
  --color-base-70: #FFFFFFB2;
  --color-base-65: rgba(255, 255, 255, 0.65);
  /* Secondary Colors */
  --color-secondary-main: #E46CAA;
}

@property --border-angle {
  inherits: false;
  initial-value: 0deg;
  syntax: '<angle>';
}


@layer utilities {

  html {
    scroll-behavior: smooth;
  }

  body {
    background: #0E0224;
    overflow-x: hidden;
  }

  /* scroll class */
  .scroll-triggering-absolute {
    @apply absolute inset-0;
    transform: translateY(100%);
  }

  .basic-container {
    @apply px-0 lg:px-0 py-0;
  }

  .shadow-custom {
    box-shadow: 4px 4px 0 #2F2F81;
  }

  .dark-text {
    @apply dark:text-[#fafafa];
  }

  .dark-btn {
    @apply dark:border-[#44447a] dark:hover:bg-[#2F2F81] dark:hover:text-[#fff] dark:hover:border-[#fff];
  }

  .primary {
    @apply text-[#260464]
  }

  .btn-gradient {
    background: linear-gradient(180.64deg, #E46CAA 10.89%, #8334B6 99.45%);
  }

  .cards-gradient {
    background: linear-gradient(115.47deg, rgba(217, 217, 217, 0.12) 0.57%, rgba(115, 115, 115, 0.12) 99.43%);
  }

  .services-card {
    background: linear-gradient(115.47deg, #E46CAA 0.57%, #8334B6 99.43%, #B350B000);
  }

  /* gradients */

  .hero-title-gradient {
    background: radial-gradient(58.64% 158.96% at 47.55% 50%, #DBDBDB 0%, #FFFFFF 9.17%, #FFFFFF 81.25%, #DBDBDB 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  .text-gradient-silver {
    background: linear-gradient(62.64deg, #DBDBDB 17.17%, #FFFFFF 32.25%, #FFFFFF 71.39%, #DBDBDB 83.91%);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    -webkit-text-fill-color: transparent;
    color: transparent;
  }

  .text-shadow {
    @apply text-white;
    text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
  }

  .rocket-bg {
    background: linear-gradient(180.64deg, #E46CAA 10.89%, #8334B6 99.45%);
    opacity: 0;
    transform: rotate(-30deg);
    opacity: 0.5;
    filter: blur(37px);
    transition: all 0.5s ease 0.15s;
  }

  .group:hover .rocket-bg {
    opacity: 0.5;
  }

  .group:hover {
    animation: rotate 6s linear infinite;
  }

  .animate-border {
    animation: border-rotate 5s linear infinite;
  }

  @keyframes rotate {
    to {
      --border-angle: 360deg;
    }
  }


  .welcome-border-gradient {
    border: 3px solid transparent;
    /* 300px arc: 300/ (2 * PI * r) * 360deg, for r ~ 100px, arc ~ 172deg */
    background: conic-gradient(from var(--border-angle, 0deg), #e46caa 0deg, #ff9800 172deg, transparent 172deg, transparent 360deg);
    opacity: 0;
    pointer-events: none;
    border-radius: 0.75rem;
    transition: opacity 0.5s;
    --border-angle: 0deg;
    animation: border-rotate 2s linear infinite;
  }

  .group:hover .welcome-border-gradient {
    opacity: 1;
  }

  @keyframes border-rotate {
    to {
      --border-angle: 360deg;
    }
  }

}

/* Vector */
/* Rectangle 1 */

/* Rectangle 1 */

/* Card.css */

/* contact form */
/* Rectangle 1 */

/* position: absolute;
left: 0%;
right: 0%;
top: 6.41%;
bottom: 0%;

background: linear-gradient(115.47deg, rgba(217, 217, 217, 0.25) 0.57%, rgba(115, 115, 115, 0.045) 99.43%);
backdrop-filter: blur(2px); */
/* Note: backdrop-filter has minimal browser support */
/* border-radius: 30px; */
/* .contacts-us-form {
  background: linear-gradient(115.47deg, rgba(217, 217, 217, 0.25) 0.57%, rgba(115, 115, 115, 0.045) 99.43%);
  backdrop-filter: blur(2px);
  border-radius: 30px;
} */

/* contact-us gradient */
.contact-us-bg-gradient {
  background: linear-gradient(180.64deg, #E46CAA 10.89%, #8334B6 99.45%);
  opacity: 0.9;
  filter: blur(102px);
  transform: rotate(-105deg);
  position: absolute;
  width: 1182px;
  height: 510px;
  right: calc(29.17% - 1182px/2 + 484px);
  bottom: calc(50% - 510px/2 - 398.86px);
}


/* ::-webkit-scrollbar {
  display: None
}

::-webkit-scrollbar-track {
  display: none;
}

::-webkit-scrollbar-thumb {
  display: none;
} */

